fix blurborder being visible on small widths

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -483,7 +483,7 @@ html {
   position: fixed;
   left: 0;
   right: 0;
-  max-width: 600px;
+  max-width: 570px;
   margin: 0 auto;
   height: calc(var(--extended-by) + var(--offset));
   top: calc(var(--header-height) - var(--offset) + var(--thickness));
